--- a/behandelingen/voetverzorging.html
+++ b/behandelingen/voetverzorging.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../css/style.css">
     <title>Hello, world!</title>
 </head>
 
@@ -17,12 +17,11 @@
 
 
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -31,8 +30,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../doelgroep.html">Doelgroep</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Behandelingen
                     </a>
@@ -41,7 +40,7 @@
                             voetverzorging</a>
                         <a class="dropdown-item" href="zolen.html">Podologische zolen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="sptings.html">Springs &#169;</a>
+                        <a class="dropdown-item" href="springs.html">Springs &#169;</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="schoenadvies.html">Schoenadvies </a>
                     </div>
@@ -57,8 +56,70 @@
         </div>
     </nav>
     <!--einde navbar-->
+    <div class="container">
+        <h1>Podologische voetverzorging</h1>
 
-    <h1>voetverzorging</h1>
+        <div class="container">
+            <h2>Instrumentele behandeling</h2>
+            <div class="container behandeling">
+                <p>Een podoloog gaat, buiten het knippen en frezen van uw nagels, ook huid- en nagelaandoeningen
+                    aanpakken zoals: likdoorns, overtollige eeltvorming, schimmelnagel, ingegroeide teennagel…
+                    <br>Regelmatige voetverzorgingen uitgevoerd door een podoloog is bij risicopatiënten zoals mensen
+                    met diabetes mellitus, vaatpathologien, reumatoide arthtritis en neurologische aandoeningen sterk
+                    aangeraden. Deze risicopatiënten hebben zeer vaak een verminderd gevoel, verminderde
+                    doorbloeding etc... Deze factoren gaan gepaard met een hoger risico voor het oplopen van
+                    wonden. De podoloog voert ook screenings uit van deze patiënten.
+                </p>
+                <img src='../assets/frezen.jpg' />
+            </div>
+        </div>
+
+        <div class="container">
+            <h2>Vilttherapie</h2>
+            <div class="container behandeling">
+                <p>Door middel van vilttherapie kunnen pijnlijke plaatsen drukvrij gelegd worden. De vilt kan gedurende
+                    enkele dagen op de
+                    voet blijven,
+                    maar vaak is het een voorlopige therapie.
+                </p>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2>Silicone- orthese (orthoplastie)</h2>
+            <div class="container behandeling_omgekeerd">
+                <p>Bij siliconentherapie wordt uit silicone een, volledig op maat, hulpstuk gemaakt en aangebracht
+                    tussen de tenen. Een
+                    silicone- orthese
+                    kan gebruikt worden om bijvoorbeeld een pijnlijke eeltplek te ontlasten.
+                </p>
+                <img src='../assets/frezen.jpg' />
+            </div>
+        </div>
+
+        <div class="container">
+            <h2>Nagelreparatietechniek (onychoplastie)</h2>
+            <div class="container behandeling">
+                <p>Bij onychoplastie wordt de gedeeltelijk verwijderde nagelplaat aangebouwd met een kunststof, zodat
+                    deze terug in de
+                    juiste richting
+                    uitgroeit. Dit wordt soms gebruikt bij een schimmelnagel of eksteroog onder de nagel.
+                </p>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2>Nagelbeugeltechniek (orthonyxie)</h2>
+            <div class="container behandeling">
+                <p>Een te sterk gekromdenagelplaat kan wel eens drukpijn geven ter hoogte van de nagelwal of kan de
+                    nagel zelfs doen
+                    ingroeien. Het
+                    plaatsen van een, op maat gemaakte, nagelbeugel kan de kromming van de nagel verminderen.
+                </p>
+            </div>
+        </div>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
