--- a/behandelingen/springs.html
+++ b/behandelingen/springs.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../css/style.css">
     <title>Hello, world!</title>
 </head>
 
@@ -17,12 +17,11 @@
 
 
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -31,8 +30,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../doelgroep.html">Doelgroep</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Behandelingen
                     </a>
@@ -41,7 +40,7 @@
                             voetverzorging</a>
                         <a class="dropdown-item" href="zolen.html">Podologische zolen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="sptings.html">Springs &#169;</a>
+                        <a class="dropdown-item" href="springs.html">Springs &#169;</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="schoenadvies.html">Schoenadvies </a>
                     </div>
@@ -57,8 +56,20 @@
         </div>
     </nav>
     <!--einde navbar-->
+    <div class="container">
+        <h1>Springs </h1>
+        <p>Draag je tijdens de zomer graag een open schoen, maar draag je podologische zolen? Dan kunnen Springs® de
+            oplossing zijn
+            als
+            aanvulling! Ervaar een ultiem gevoel van comfort en welbehagen dankzij het 100% op maat gemaakte voetbed.
+            Kies bovendien
+            jouw favoriete model, kleur van bovenwerk én type leder. Creëer zo jouw eigen unieke, persoonlijke en
+            bovenal onmisbare
+            slippers.</p>
+        <p>Klik <a href='https://www.springs-shoes.com/' target='_blank'>hier</a> voor meer info of neem gerust contact
+            op.</p>
 
-    <h1>Springs</h1>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
