--- a/behandelingen/zolen.html
+++ b/behandelingen/zolen.html
@@ -9,7 +9,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/behandelingen.css">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
     <title>Hello, world!</title>
 </head>
 
@@ -17,12 +20,11 @@
 
 
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -31,8 +33,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../doelgroep.html">Doelgroep</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Behandelingen
                     </a>
@@ -41,7 +43,7 @@
                             voetverzorging</a>
                         <a class="dropdown-item" href="zolen.html">Podologische zolen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="sptings.html">Springs &#169;</a>
+                        <a class="dropdown-item" href="springs.html">Springs &#169;</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="schoenadvies.html">Schoenadvies </a>
                     </div>
@@ -57,20 +59,163 @@
         </div>
     </nav>
     <!--einde navbar-->
+    <div class="container">
+        <h1>Podologische zolen</h1>
+        <p>Zooltherapie wordt aangeraden wanneer er een duidelijk, oorzakelijk verband bestaat tussen de klinische
+            testen en
+            bewegingsanalyse
+            enerzijds en de klachten anderzijds. Podologische zolen kunnen ook aanbevolen worden vooraleer er zich
+            klachten
+            voordoen.</p>
 
-    <h1>zolen</h1>
+        <div class="container">
+            <div id="accordion" class="accordeon">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+                <h2>Hoe wordt een podologische zool nu gemaakt? </h2>
+
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0 ">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                                aria-expanded="true" aria-controls="collapseOne ">
+                                1. Anamnese
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                            uitgebreid vraaggesprek van de klacht
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                aria-expanded="false" aria-controls="collapseTwo">
+                                2. Klinisch- en biomechanisch onderzoek
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                            De spierkracht, spierlengte, mobiliteit van gewrichten... worden getest.
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                                aria-expanded="false" aria-controls="collapseThree">
+                                3. Ganganalyse
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+                            stappatroon wordt gefilmd en opgenomen met behulp
+                            van high speed camera.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
+                                aria-expanded="false" aria-controls="headingFour">
+                                4. 3D- scan
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                        <div class="card-body">
+                            3D- scan van de voeten waarop de podologische zolen digitaal
+                            worden ontworpen.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFive">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive"
+                                aria-expanded="false" aria-controls="collapseFive">
+                                5. Schoenadvies
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                        <div class="card-body">
+                            stappatroon wordt gefilmd en opgenomen met behulp
+                            van high speed camera.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <!-- wat meebrengen -->
+            <div class="container headline">
+                <h2> Wat meebrengen? </h2>
+                <form id="todo-list">
+                    <span class="todo-wrap EenPerEen1">
+                        <input type="checkbox" id="1" checked />
+                        <label for="1" class="todo">
+                            <i class="fa fa-check"></i>
+                            Short tot boven de knieën (sportieve kledij)
+                        </label>
+                    </span>
+                    <span class="todo-wrap EenPerEen2">
+                        <input type="checkbox" id="2" />
+                        <label for="2" class="todo">
+                            <i class="fa fa-check"></i>
+                            Dagdagelijkse schoenen, sportschoenen, werkschoenen…
+                        </label>
+                    </span>
+                    <span class="todo-wrap EenPerEen3">
+                        <input type="checkbox" id="3" />
+                        <label for="3" class="todo">
+                            <i class="fa fa-check"></i>
+                            Oude zolen
+                        </label>
+                    </span>
+                    <span class="todo-wrap EenPerEen4">
+                        <input type="checkbox" id="4" />
+                        <label for="4" class="todo">
+                            <i class="fa fa-check"></i>
+                            Medische beeldvormingen, verslagen huisarts/specialist
+                        </label>
+                    </span>
+                    <span class="todo-wrap EenPerEen5">
+                        <input type="checkbox" id="5" />
+                        <label for="5" class="todo">
+                            <i class="fa fa-check"></i>
+                            Voorschrift van de arts (niet verplicht)
+                        </label>
+                    </span>
+                </form>
+            </div>
+        </div>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
