--- a/behandelingen/springs.html
+++ b/behandelingen/springs.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Hello, world!</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
+        rel="stylesheet">
+    <title>Springs&#174;</title>
 </head>
 
 <body>
@@ -40,7 +43,7 @@
                             voetverzorging</a>
                         <a class="dropdown-item" href="zolen.html">Podologische zolen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="springs.html">Springs &#169;</a>
+                        <a class="dropdown-item" href="springs.html">Springs &#174;</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="schoenadvies.html">Schoenadvies </a>
                     </div>
@@ -57,7 +60,7 @@
     </nav>
     <!--einde navbar-->
     <div class="container">
-        <h1>Springs </h1>
+        <h1>Springs&#174;</h1>
         <p>Draag je tijdens de zomer graag een open schoen, maar draag je podologische zolen? Dan kunnen Springs® de
             oplossing zijn
             als
