--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/form.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
+        rel="stylesheet">
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
 
@@ -61,6 +64,7 @@
 
     <div class="container ctr">
         <h1>Maak een afspraak</h1>
+        <p class='contact_quote'>Indien u verhinderd bent gelieve dan 24u op voorhand te verwittigen.</p>
         <div class='contact_wrap'>
             <div class=" container ctr contact_container">
                 <h2>Merkem</h2>
