--- a/doelgroep.html
+++ b/doelgroep.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
+        rel="stylesheet">
     <title>Hello, world!</title>
 </head>
 
@@ -58,7 +61,7 @@
     <!--einde navbar-->
 
     <div class='container doelgroep'>
-        <h1>Kinderen</h1>
+        <h1 class='doelgroep_h1'>Kinderen</h1>
         <section class="doelgroep_tekst">
             <p>Kindervoetjes zijn erg gevoelig en vragen extra veel aandacht, zeker wanneer ze hun eerste
                 stapjes zetten.
