--- a/behandelingen/zolen.html
+++ b/behandelingen/zolen.html
@@ -11,9 +11,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/behandelingen.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
+        rel="stylesheet">
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
-    <title>Hello, world!</title>
+    <title>Zolen</title>
 </head>
 
 <body>
