--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
     <!--einde navbar-->
 
     <!-- Header -->
-    <header class="py-5 mb-5 header">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-lg-12">
-                    <h1 class="display-4 text-white mt-5 mb-2">Welkom bij Podologie Thamara! </h1>
-                    <p class="lead mb-5 text-white-50">U kan bij ons terecht voor verschillende behandelingen, dit op
-                        eigen initiatief of via doorverwijzing van de huisarts of specialist.</p>
+    <header class="py-5 mb-5 header ">
+        <div class="container h-100 ">
+            <div class="row h-100 ">
+                <div class="container logo_trans">
+                    <div class="col-lg-12">
+                        <h1 class="display-4 text-white mt-5 mb-2">Welkom bij Podologie Thamara! </h1>
+                        <p class="lead mb-5 text-white-50">U kan bij ons terecht voor verschillende behandelingen, dit
+                            op
+                            eigen initiatief of via doorverwijzing van de huisarts of specialist.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -124,22 +127,10 @@
         <!-- /.row -->
 
         <div class="row">
+
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="https://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Voetverzorging</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque sequi doloribus.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Lees meer!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="https://placehold.it/300x200" alt="">
+                    <img class="card-img-top" src="./assets/zolen1.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Podologische zolen</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
@@ -152,7 +143,20 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="https://placehold.it/300x200" alt="">
+                    <img class="card-img-top" src="./assets/voetverzorging3.jpg" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Voetverzorging</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
+                            necessitatibus neque sequi doloribus.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#" class="btn btn-primary">Lees meer!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <img class="card-img-top" src="./assets/schoenadvies1.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Schoenadvies</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
@@ -168,7 +172,7 @@
 
     </div>
     <!-- /.container -->
-    <div class="container">
+    <div class="container over_mezelf_container">
         <div class='row'>
             <div class="col-md-8 mb-5">
                 <h2>Over mezelf</h2>
@@ -186,7 +190,7 @@
                 </p>
                 <a class="btn btn-primary btn-lg" href="#">Bekijk onze behandelingen &raquo;</a>
             </div>
-            <div class="col-md-4 mb-5"><img src="assets/avatar2.png" alt="mezelf"></div>
+            <div class="col-md-4 mb-5"><img class='profielfoto' src="assets/profielfoto.jpg" alt="mezelf"></div>
         </div>
     </div>
 
