--- a/doelgroep.html
+++ b/doelgroep.html
@@ -60,8 +60,8 @@
     </nav>
     <!--einde navbar-->
 
-    <div class='container doelgroep'>
-        <h1 class='doelgroep_h1'>Kinderen</h1>
+    <div class='container doelgroep kinderen_container'>
+        <h1 class='doelgroep_h1 kinderen_h1'>Kinderen</h1>
         <section class="doelgroep_tekst">
             <p>Kindervoetjes zijn erg gevoelig en vragen extra veel aandacht, zeker wanneer ze hun eerste
                 stapjes zetten.
@@ -83,8 +83,8 @@
         </section>
     </div>
 
-    <div class='container doelgroep'>
-        <h1>Volwassenen</h1>
+    <div class='container doelgroep volwassenen_container'>
+        <h1 class='doelgroep_h1'>Volwassenen</h1>
         <section>
             <p class="doelgroep_tekst">Iedere dag en bij elke beweging worden onze voeten belast. De hoeveelheid
                 belasting is afhankelijk van
