doelgroep pagina bijna helemaal in orde

--- a/terugbetaling.html
+++ b/terugbetaling.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
         rel="stylesheet">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
     <title>Terugbetaling</title>
 </head>
 
@@ -72,13 +74,16 @@
                 van
                 uw (huis)arts verplicht.</li>
             <li>Podologische zolen worden enkel terugbetaald bij:<ul>
-                    <li>Partena voorziet per kalenderjaar een tegemoetkoming van 50 euro per paar podologische zolen.
+                    <li><strong>Partena</strong> voorziet per kalenderjaar een tegemoetkoming van <strong>50 euro per
+                            paar</strong>
+                        podologische zolen.
                         Klik <a
                             href='https://www.partena-ziekenfonds.be/nl/ziekenfonds-en-voordelen/voordelen-en-terugbetalingen/steunzolen'
                             target='_blank'>hier</a> voor
                         meer informatie.</li>
-                    <li>Liberale mutualiteit voorziet, op voorschrift van de huisarts, elke twee jaar een tussenkomst
-                        van 30 euro per paar
+                    <li><strong>Liberale mutualiteit</strong> voorziet, op voorschrift van de huisarts, elke twee jaar
+                        een tussenkomst
+                        van <strong>30 euro per paar</strong>
                         podologische zolen. Klik <a
                             href='https://www.lm.be/LMPlus/Rubrieken/Voordelen-en-diensten/Preventie/podologische_zolen/Pages/DefaultArticle.aspx'
                             target='_blank'>hier</a> voor meer informatie.</li>
@@ -90,6 +95,41 @@
     <div class="container btn_contact_container">
         <button class='btn btn-primary btn_contact'>Contacteer mij gerust voor meer info</button>
     </div>
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Like ons op</h5>
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Contacteer ons</h5>
+                    <address>
+                        <i class="fas fa-phone-alt"></i>
+                        0476/ 88 06 66
+                        <br>
+                        <i class="far fa-envelope"></i>
+                        <a href="mailto:#">thamaradevos@hotmail.com</a>
+                    </address>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Locatie</h5>
+                    <address>
+                        <strong>Podologie Thamara</strong>
+                        <br>Iepersteenweg 34
+                        <br>8650 Merkem
+                        <br>
+                    </address>
+                </div>
+            </div>
+            <hr>
+            <h5 class='vanbyte_footer'>2021 - <a href='https://www.vanbyte.be' target="_blank">VANBYTE</a></h5>
+        </div>
+        <br>
+
+    </section>
+    <!-- ./Footer -->
 
 
 
